--- a/css/detail_media.css
+++ b/css/detail_media.css
@@ -1,834 +1,6 @@
 @charset "utf-8";
 
 
-/* 문단1 */
-
-#content1 {
-    width: 100%;
-    height: 500px;
-}
-
-#content1 .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-/* 이미지상자 */
-
-#content1 .container .imgbox1 {
-    width:50%;
-    height: 400px;
-    border-radius: 10px;
-    overflow: hidden;
-}
-.slide{
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.slide li{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
-.slide img{
-    width: 100%;
-    height: 100%;
-}
-
-.slide li:not(:first-child){
-    display: none;
-}
-
-/* 텍스트상자 */
-
-#content1 .container .textbox1 {
-    width: 45%;
-    height: auto;
-}
-
-.productTop span{
-    border: 1px solid #999;
-    color: #777;
-    border-radius: 5px;
-    padding: 3px 7px;
-    font-size: 12px;
-    font-weight: bold;
-}
-.textbox1 h3{
-    margin: 15px 0;
-    font-weight: 900;
-    font-size: 25px;
-}
-.textbox1 p:nth-of-type(1){
-    color: rgb(65, 65, 253);
-    margin-bottom: 10px;
-}
-
-.star-rating{
-    width: 119px;
-    display: inline-block;
-    height: 22px;
-    overflow: hidden;
-    background: url(../img/star.png)no-repeat;
-    cursor: pointer;
-   }
-   .star-rating span{
-    display: inline-block;
-    height: 22px;
-    overflow: hidden;
-    background: url(../img/star.png)no-repeat;
-    background-position: left bottom;
-    line-height: 0;
-    vertical-align: top;
-    width: 89%;
-   }
-
-.textbox1 p:nth-of-type(2){
-    font-size: 28px;
-}
-.textbox1 p small{
-    color: #777;
-    font-size: 18px;
-    font-weight: bold;
-}
-.textbox1 p span{
-    font-size: 18px;
-}
-.textbox1 .table{
-    width: 100%;
-    font-size: 18px;
-    margin-top: 10px;
-}
-
-.textbox1 .table dl{
-    display: flex;
-    border-bottom: 1px solid #eee;
-    cursor: pointer;
-    position: relative;
-}
-
-.textbox1 .table dl dt{
-    width: 25%;
-    margin: 15px 0;
-    font-weight: bold;
-}
-.textbox1 .table dl dd{
-    width: 70%;
-    margin: 15px 0;
-}
-.textbox1 .table dl dd::after{
-    content: "";
-    background-image: url(../img/icon5.png);
-    background-size: 10px 15px;
-    display: inline-block;
-    width: 10px;
-    height: 15px;
-    position: absolute;
-    right: 0;
-    top: 25px;
-}
-
-
-hr{
-    width: 1200px;
-    border: 1px solid #555;
-    margin: 0 auto;
-   
-}
-
-/* 문단2 */
-
-
-#content2 .container {
-    display: flex;
-    flex-flow: wrap;
-    justify-content: space-between;
-
-}
-
-#content2>.container>h2 {
-    width: 100%;
-    height: 100px;
-    font-size: 25px;
-    padding-top: 30px;
-}
-
-/* 선택박스 */
-.selectbox {
-    width: 30%;
-    height: 600px;
-    border-radius: 10px;
-    position: sticky;
-    top: 0;
-}
-
-.selectbox .ess {
-    border: 1px solid #555;
-    border-radius: 10px;
-    padding: 20px;
-
-}
-.adult dl{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.adult dl dt{
-    padding: 10px 0;
-}
-.adult dl dt p{
-    font-size: 14px;
-    color: #666;
-}
-.adult dl dt b{
-    font-size: 25px;
-}
-.adult dl dd{
-    padding: 10px 0;
-}
-.minus{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid #999;
-    background-color: white;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.plus{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid #999;
-    background-color: white;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.count{
-    text-align: center;
-    border: none;
-    font-size: 20px;
-    width: 40px;
-    outline: none;
-}
-/* .minus1, .minus2, .minus3{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid #999;
-    background-color: white;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.plus1, .plus2, .plus3{
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 1px solid #999;
-    background-color: white;
-    font-size: 20px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.count1, .count2, .count3{
-    text-align: center;
-    border: none;
-    font-size: 20px;
-    width: 40px;
-    outline: none;
-} */
-.ess>p{
-    font-size: 14px;
-}
-.selectbox>dl{
-    display: flex;
-    justify-content: space-between;
-}
-.selectbox>dl{
-    border-bottom: 1px solid #999;
-    margin: 20px 0;
-    line-height: 50px;
-    font-size: 20px;
-}
-.selectbox button{
-  padding: 10px; 
-  margin: 10px 0;
-  font-size: 16px;
-  border: 1px solid #999;
-  color: #444;
-  cursor: pointer;
-  border-radius: 10px;
-}
-.selectbox .btn1{
-    width: 100%;
-  font-size: 20px;
-  background-color: #4C58FF;
-  color:white;
-}
-.selectbox .btn2{
-    width: 49%;
-    margin-right: 1%;
-    background-color: white;
-}
-
-.selectbox .btn3{
-    width: 49%;
-    background-color: white;
-}
-
-
-
-
-/* 상단박스 */
-
-.travelbox {
-    width: 68%;
-    height: auto;
-}
-
-
-.top{
-    width: 100%;
-    height: 370px;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-content: space-between;
-    margin-bottom: 50px;
-}
-.box1{
-    width: 100%;
-    height: 150px;
-    background-color: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 10px;
-    color:#777;
-    font-weight: bold;
-    padding: 20px;
-}
-.box1 .icon2{
-    width: 18%;
-    line-height: 30px;
-}
-.box1 .icon2 img{
-    width:30px;
-    height: 30px;
-
-}
-
-.box2{
-    width: 49%;
-    height: 200px;
-    background-color: #eee;
-    border-radius: 10px;
-    padding: 20px;
-}
-
-.box2 table{
-    width: 100%;
-    font-size: 18px;
-    margin: 10px 0 ;
-
-}
-
-.box2 button{
-    width: 100%;
-    height: 45px;
-    font-size: large;
-    cursor: pointer;
-    border-radius: 10px;
-    color: #4C58FF;
-    border: 1px solid #4C58FF;
-    background-color: rgba(255, 255, 255, 0.781);
-}
-
-
-.top_text{
-    display: inline-block;
-    width: 70%;
-    
-}
-.top_img{
-    display: inline-block;
-    width: 75px;
-    background-image:url(../img/logo.png);
-    height: 70px;
-    background-size:contain;
-    background-repeat: no-repeat;
-    position: relative;
-    top: 0;
-    left: 20px;
-    animation: navi 4s linear infinite ;
-}
-@keyframes navi{
-    0%{top: -50px;}
-    50%{width: 50px;}
-    100%{top: -50px;}
-}
-
-.top_text p:nth-of-type(1){
-    font-size: 20px;
-    margin:15px 0 50px 0;
-}.top_text p:nth-of-type(2){
-    font-size: 15px;
-   
-}
-#subNav{
-    width: 100%;
-    height: 60px;
-    display: flex;
-    border-bottom: 2px solid #ddd;
-
-}
-#subNav li{
-    width: 25%;
-    height: 100%;
-    
-    text-align: center;
-    font-size: 20px;
-    padding-top: 15px;
-    cursor: pointer;
-}
-
-.navCss{
-    border-bottom: 4px solid #ddd;
-    font-weight : bold;
-}
-
-
-/* 상품소개 */
-
-.intro{
-    width: 100%;
-
-}
-.intro>h2{
-   width: 95%;
-    font-size: 3em;
-    padding-top: 1.5em;
-    margin: 0 auto;
-
-}
-.intro>p{
-    font-size: 1.5em;
-    width: 95%;
-    margin: 0 auto;
-    padding: 0.4em 0 2em 0;
-}
-.imgbox2{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-evenly;
-    background-color: #eee;
-    border-radius: 10px;
-    padding: 40px 20px;
-    width: 95%;
-    margin: 0 auto;
-}
-
-.imgbox2 img{
-    width: 45%;
-    margin: 1%;
-    border-radius: 10px;
-}
-
-.imgbox2>dl{
-   width: 95%;
-   margin: 20px;
-}
-.imgbox2 dl dt{
-    font-size: 25px;
-    font-weight: bold;
-}
-.imgbox2 dl dd{
-    line-height: 35px;
-    font-size: 20px;
-    letter-spacing: 2px;
-    margin: 10px;
-}
-.imgbox2 dl .md{
-    background-color: white;
-    padding: 25px;
-    border-radius: 10px;
-    margin: 10px 0;
-}
-
-.intro h3{
-    font-size: 23px;
-    margin-top: 100px;
-}
-.info{
-    background-color: #eee;
-    border-radius: 10px;
-    padding: 2em;
-    margin: 1em 0;
-}
-.info dl{
-    display: flex;
-}
-.info dl dt{
-    font-weight: bold;
-    color: #777;
-    margin: 5px;
-}
-.info dl dd{
-    margin: 5px 10px;
-    font-weight: bold;
-}
-
-.info1{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-}
-
-.info1 h3{
-    width: 100%;
-}
-
-.info1 dl{
-    width: 45%;
-    margin: 30px 0;
-}
-
-.info1 dl dt{
-    font-size: 20px;
-    font-weight: bold;
-    line-height: 30px;
-}
-.info1 dl dd{
-    font-size: 18px;
-    line-height: 45px;
-}
-.info2{
-    border: 1px solid #555;
-    border-radius: 10px;
-    padding: 1em;
-    margin-top: 1.5em;
-}
-.info2 dl{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.info2 dl dt{
-    font-size: 22px;
-    line-height: 50px;
-}
-.info2 dl dd b{
-    font-size: 20px;
-    letter-spacing: 1.5px;
-}
-.intro p:nth-of-type(2){
-    font-size: 15px;
-    margin-bottom: 150px;
-}
-
-
-
-/* 일정표 */
-
-.schedule{
-    width: 100%;
-    display: none;
-}
-
-.schedule>p{
-    margin: 30px 0;
-    font-size: 16px;
-    color: #999;
-    
-}
-.scheduleInfo{
-    margin-bottom: 70px;
-    border-bottom: 5px solid #eee;
-}
-.scheduleInfo p{
-    font-size: 25px;
-    font-weight: bold;
-}
-.scheduleInfo p small{
-    padding: 10px;
-    color: #999;
-    font-size: 18px;
-}
-.scheduleInfo ul{
-    margin: 40px 0;
-    padding-left: 50px;
-}
-
-.scheduleInfo ul li{
-   margin: 20px 0;
-    list-style-type: disc;
-    font-size: 20px;
-    font-weight: 500;
-}
-.sch_imgbox{
-    display: flex;
-    justify-content: space-around;
-    margin: 40px 0;
-    
-}
-.sch_imgbox>div{
-    width: 40%;
-    height: 200px;
-    border-radius: 10px;
-    background-color: #4C58FF;
-}
-.sch_box1{
-    background-image: url(../img/sub8.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box2{
-    background-image: url(../img/sub11.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box3{
-    background-image: url(../img/sub12.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box4{
-    background-image: url(../img/sub5.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box5{
-    background-image: url(../img/sub13.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box6{
-    background-image: url(../img/sub7.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box7{
-    background-image: url(../img/sub15.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box8{
-    background-image: url(../img/sub16.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box9{
-    background-image: url(../img/sub3.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_box10{
-    background-image: url(../img/sub4.jpg);
-   background-size: cover;
-   overflow: hidden;
-   background-position: center;
-
-}
-.sch_txt{
-    background-color: #4c58ff8f;
-    color: white;
-    padding: 5px 20px;
-    position: relative;
-    top: 161px;
-}
-
-
-
-
-
-/* 상세정보 */
-.detail {
-    width: 100%;
-    display: none;
-   
-}
-
-.de_top h3{
-    font-size: 20px;
-    margin: 30px 0 20px 0;
-}
-
-.de_top dl{
-    line-height: 30px;
-}
-
-.de_top p{
-    margin: 40px 0;
-}
-.de_top p:nth-of-type(1){
-    font-weight:bold;
-    color: tomato;
-}
-.dt_hide{
-    line-height: 30px;
-    margin-bottom: 100px;
-    display: none;
-}
-.dt_hide dd{
-    padding: 13px 0;
-}
-
-.detail button{
-    width: 100%;
-    padding: 20px;
-    font-size: 18px;
-    border-radius: 10px;
-    background-color: white;
-    border: 1px solid #999;
-    margin-bottom: 100px;
-
-}
-
-/* 리뷰 */
-.review{
-    width: 100%;
-    margin: 50px 0;
-    display: none;
-}
-.re_top{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    border-bottom: 5px solid #eee;
-    padding-bottom: 30px;
-}
-.starRate{
-    width: 30%;
-    text-align: center;
-}
-.starRate p{
-    text-align: center;
-    font-size: 50px;
-}
-.rate{
-    width: 70%;
-}
-.re_top .star-rating{
-    text-align: center;
-}
-.re_top .star-rating span{
-    width: 90%;
-   margin-right: 30px;
-}
-.rate dl{
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-}
-.rate dl dd:nth-of-type(1){
-    width: 30%;
-    text-align: left;
-}
-.rate dl dd:nth-of-type(2){
-    width: 60%;
-    
-}
-.rate dl dd:nth-of-type(3){
-    width: 20%;
-}
-.rate dl dd progress{
-    width: 250px;
-}
-.re_box{
-    border-bottom: 1px solid #eee;
-}
-.re_vis{
-    padding: 20px 0 ;
-    cursor: pointer;
-}
-.re_vis p::after{
-    content: "";
-    background-image:url(../img/V_icon.png);
-    background-size: 15px 8px;
-    display: inline-block;
-    position: absolute;
-    right: 0;
-    top: 10px;
-    width: 15px;
-    height: 8px;
-}
-.re_vis .star-rating span{
-    width: 100%;
-}
-.re_hide{
-    display: none;
-}
-.re_vis p{
-    font-size: 20px;
-    margin: 10px 0;
-    font-weight: bold;
-    position: relative;
-}
-
-.re_hide p:nth-of-type(1){
-    background-color: #eee;
-    margin: 5px 0;
-    padding: 15px 10px 20px 15px;
-    border-radius: 10px;
-}
-.re_hide p span{
-    color: #4C58FF;
-    margin: 0 5px;
-}
-.re_hide p:nth-of-type(2){
-    padding: 20px 10px 20px 0;
-    margin-bottom: 20px;
-    line-height: 30px;
-}
-
-.re_img img{
-    width: 45%;
-    border-radius: 10px;
-    margin: 1% 0;
-}
-.re_hide dl{
-    background-color: #01c0ff52;
-    border-radius: 10px;
-    padding: 20px;
-    line-height: 30px;}
-.re_hide dl dt{
-    font-weight: bold;
-}
-
-
 /* 모바일 사이즈 */
 @media (max-width:749px){
 /* 문단1 */
@@ -1328,6 +500,7 @@ hr{
 }
 .box1{
     padding: 3%;
+    margin: 2% 0;
 }
 
 .box1 .icon2{
@@ -1372,140 +545,130 @@ hr{
     font-size: 13px;
 }
 
+#subNav li{
+    font-size: 17px;
+}
+
 
 /* 상품소개 */
 
 .intro>h2{
-   width: 100%;
-    font-size: 1.6em;
-    padding-top: 1em;
+    font-size: 1.5em;
 }
 .intro>p{
-    font-size: 1.2em;
-    width: 100%;
-    padding: 0.4em 0 2em 0;
+    font-size: 1em;
 }
 .imgbox2{
-    padding: 5%;
-    width: 100%;
+    padding: 0 3%;
 }
 
 .imgbox2 img{
-    width: 100%;
-    margin: 5% 0;
-}
-
-.imgbox2>dl{
-   width: 100%;
-   margin: 0;
+    margin: 4% 0;
 }
 .imgbox2 dl dt{
-    font-size: 20px;
-    font-weight: bold;
+    font-size: 17px;
 }
 .imgbox2 dl dd{
-    font-size: 18px;
+    font-size: 15px;
 }
 
 .intro h3{
-    font-size: 23px;
-    margin-top: 100px;
+    font-size: 20px;
+}
+.info dl dt{
+    font-size: 14px;
+}
+.info dl dd{
+    font-size: 15px;
 }
 
-.info1{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-}
 
 .info1 h3{
-    width: 100%;
+    font-size: 20px;
 }
-
 .info1 dl{
-    width: 100%;
+    margin: 015px;
 }
-
-.info1 dl dd{
+.info1 dl dt{
     font-size: 17px;
 }
+.info1 dl dd{
+    font-size: 15px;
+}
+
+
+.info2 dl dt{
+    font-size: 18px;
+}
+.info2 dl dd{
+    font-size: 15px;
+}
+.info2 dl dd b{
+    font-size: 18px;
+    letter-spacing: 1.5px;
+}
+.intro p:nth-of-type(2){
+    font-size: 12px;
+}
+
 
 
 /* 일정표 */
 
+.schedule>p{
+    font-size: 13px;
+}
+
 .scheduleInfo p{
-    font-size: 24px;
-    font-weight: bold;
+    font-size: 20px;
 }
 .scheduleInfo p small{
-    font-size: 18px;
+    font-size: 15px;
 }
-
+.scheduleInfo ul{
+    padding-left: 25px;
+}
 .scheduleInfo ul li{
-    font-size: 17px;
-}
-.sch_imgbox{
-    flex-wrap: wrap;
-    height: auto;
-    justify-content: center;
-}
-.sch_imgbox>div{
-    width: 100%;
-    max-height:400px;
-    margin: 3% 0;
+    font-size: 16px;
 }
 
-.sch_txt{
-    top: 165px;
+/* 상세정보 */
+.de_top dl{
+    font-size: 15px;
 }
-
+.de_top p{
+    font-size: 15px;
+}
+.dt_hide dl{
+    font-size: 15px;
+}
+.detail button{
+    font-size: 16px;
+}
 
 /* 리뷰 */
-.review{
-    margin: 20px 0 50px 0;
-}
-.re_top{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    padding-bottom: 30px;
-}
-.starRate{
-    width: 100%;
-}
-
-.rate{
-    width: 100%;
-}
-
-.rate dl{
-   margin: 1% 0;
+.starRate p{
+    font-size: 45px;
 }
 .rate dl dd:nth-of-type(1){
-    width: 25%;
-}
-.rate dl dd:nth-of-type(2){
-    width: 55%;
-    
+    font-size: 15px;
 }
 .rate dl dd:nth-of-type(3){
-    width: 20%;
-}
-.rate dl dd progress{
-    width: 40vw;
+    text-align: right;
+    font-size: 15px;
 }
 .re_vis p{
-    font-size: 17px;
+    font-size: 16px;
 }
 .re_vis>span{
-    font-size: 15px;
+    font-size: 14px;
 }
 
-.re_img img{
-    width: 90%;
-}
 .re_hide p{
-    font-size: 15px;
+    font-size: 14px;
+}
+.re_hide dl{
+    font-size: 14px;
 }
 
 
@@ -1522,6 +685,16 @@ hr{
 
 .selectbox>dl{
     display: none;
+}
+.selectbox .btn2{
+    width: 48%;
+    margin: 0 1%;
+    font-size: 15px;
+}
+
+.selectbox .btn3{
+    width: 48%;
+    font-size: 15px;
 }
 
 }
