--- a/css/detail.css
+++ b/css/detail.css
@@ -731,15 +731,15 @@ hr{
     justify-content: space-between;
     text-align: center;
 }
-.rate dl dd:nth-of-type(1){
+.rate dl dt{
     width: 30%;
     text-align: left;
 }
-.rate dl dd:nth-of-type(2){
+.rate dl dd:nth-of-type(1){
     width: 60%;
     
 }
-.rate dl dd:nth-of-type(3){
+.rate dl dd:nth-of-type(2){
     width: 20%;
 }
 .rate dl dd progress{
