--- a/css/detail_media.css
+++ b/css/detail_media.css
@@ -244,14 +244,14 @@ hr{
 .rate dl{
    margin: 1% 0;
 }
-.rate dl dd:nth-of-type(1){
+.rate dl dt{
     width: 25%;
 }
-.rate dl dd:nth-of-type(2){
+.rate dl dd:nth-of-type(1){
     width: 55%;
     
 }
-.rate dl dd:nth-of-type(3){
+.rate dl dd:nth-of-type(2){
     width: 20%;
 }
 .rate dl dd progress{
@@ -666,10 +666,10 @@ hr{
 .starRate p{
     font-size: 45px;
 }
-.rate dl dd:nth-of-type(1){
+.rate dl dt{
     font-size: 15px;
 }
-.rate dl dd:nth-of-type(3){
+.rate dl dd:nth-of-type(2){
     text-align: right;
     font-size: 15px;
 }
