--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    translate: -50% -50%;
+    transform: translate(-50% , -50%);
     background-color: rgba(90, 90, 90, 0.5);
     width: 100%;
     height: 100%;
@@ -126,7 +126,7 @@
     position: absolute;
     top: -30%;
     left: 50%;
-    translate: -50% 0;
+    transform: translate(-50% , 0);
     background-color: white;
     border: 3px solid #01bfff;
     display: flex;
@@ -251,7 +251,7 @@
     background-color: #fff;
     text-align: center;
     top: 50%;
-    translate: 0 -50%;
+    transform: translate(0 , -50%);
     opacity: 0.5;
     transition: 0.5s;
 }
@@ -273,7 +273,7 @@
     text-align: center;
     top: 50%;
     right: 0;
-    translate: 0 -50%;
+    transform: translate(0 , -50%);
     opacity: 0.5;
     transition: 0.3s;
 }
@@ -504,7 +504,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    translate: -50% -50%;
+    transform: translate(-50% , -50%);
     font-size: 25px;
     color: #fff;
 }
